--- a/index.html
+++ b/index.html
@@ -5,26 +5,152 @@
         <link rel="stylesheet" type="text/css" href="./resource/reset.css">
         <link rel="stylesheet" href="./resource/style.css" type="text/css">
     </head>
+<body>
     <!--Header for webpage-->
     <header>
         <div class="logo">
-
+            <img src="./resource/images/ic-logo.svg" alt="Logo">
+            <span><em>COLMAR</em>ACADEMY</span>
         </div>
-        <nav>
-            
+        <nav class="nava">
+            <a href="#">On Campus</a>
+            <a href="#">Online</a>
+            <a href="#">For Companies</a>
+            <a href="#">Sign in</a>
         </nav>
+        <!--Nav section for mobile portal-->
+        <!--<nav class="navb">
+            <a href="#"><img src=".resource/images/ic-on-campus.svg" alt="On-campus"></a>
+            <a href="#"><img src=".resource/images/ic-online.svg" alt="Online"></a>
+            <a href="#"><img src=".resource/images/ic-login.svg" alt="Login"></a>
+        </nav>-->
     </header>
     <!-- Content for web page-->
     <div class="content">
         <!--Banner Portion of Page-->
-
-        <!--Event Portion of page-->
+            <div class="banner">
+                <div class="ban">
+                    <img src=".resource/images/banner.jpg" alt="Banner">
+                </div>
+                <div class="ban">
+                    <h1>Learn something new everyday</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <a class="btn" href"#">Start here</a>
+                    <!--
+                    <div class="bann a">
+                        <h1>Lefrn something new everyday</h1>
+                    </div>
+                    <div class="bann b">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                    <div class="bann c">
+                        <a href"#">Start here</a>
+                    </div>-->
+                </div>
+            </div>
+        <!--Information Portion of page-->
+            <div class=info>
+                <div class="data">
+                    <img src=".resource/images/information-main.jpg" alt="Main Info">
+                    <h2>It doesn't hurt to keep practicing</h2>
+                    <p>"Codecademy is an online interactive platform that offers free coding class
+                        12 different programming languages including Python, Java, PHP, JavaScript, 
+                        Ruby, SQL, and Sass, as well as markup languages HTML and CSS."</p>
+                    <span class="eman">Emanuel, St Strategist at Hiring.com</span>
+                </div>
+                <div class="data">
+                    <div class="block">
+                        <div class="indep">
+                            <img src=".resource/images/orientation.jpg" alt="Orientation">
+                        </div>
+                        <div class="indepth">
+                            <h3>Orientation Date</h3>
+                            <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                    <div class="block">
+                        <div class="indep">
+                            <img src=".resource/images/campus.jpg" alt="Orientation">
+                        </div>
+                        <div class="indepth">
+                            <h3>Our Campus</h3>
+                            <p>Find which campus is close by you</p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                    <div class="block">
+                        <div class="indep">
+                            <img src=".resource/images/orientation/jpg" alt="Orientation">
+                        </div>
+                        <div class="indepth">
+                            <h3>Our guest lecture</h3>
+                            <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         <!--Course portion of page-->
+        <div class="course">
+            <div class="core">
+                <h1>Start Learning</h1>
+            </div>
+            <div class="core">
+                <div class="blocks">
+                    <img src=".resource/images/course-software.jpg" alt="Software">
+                    <h3>Software Engineering</h3>
+                    <h4>Courses</h4>
+                    <p>Web Development, Mobile Development, IOT, API's </p>
+                </div>
+                <div class="blocks">
+                    <img src=".resource/images/course-computer-art.jpg" alt="Software">
+                    <h3>Computer Art</h3>
+                    <h4>Courses</h4>
+                    <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+                </div>
+                <div class="blocks">
+                    <img src=".resource/images/course-design.jpg" alt="Software">
+                    <h3>Design</h3>
+                    <h4>Courses</h4>
+                    <p>User Experience Design, User Research, Visual Design</p>
+                </div>
+                <div class="blocks">
+                    <img src=".resource/images/course-data.jpg" alt="Software">
+                    <h3>Data</h3>
+                    <h4>Courses</h4>
+                    <p>Data Science, Big Data, SQL, Data Visualizations</p>
+                </div>
+                <div class="blocks">
+                    <img src=".resource/images/course-business.jpg" alt="Software">
+                    <h3>Business</h3>
+                    <h4>Courses</h4>
+                    <p>Product Development, Business Development, Startup</p>
+                </div>
+                <div class="blocks">
+                    <img src=".resource/images/course-marketing.jpg" alt="Software">
+                    <h3>Marketing</h3>
+                    <h4>Courses</h4>
+                    <p>Analytics, Content Marketing, Mobile Marketing</p>
+                </div>
+            </div>
+        </div>
         <!--Exhibit portion of page-->
-
+        <div class="exhibit">
+            <div class="hib">
+                <h2>Thesis exhibit</h2>
+            </div>
+            <div class="hib">
+            </div>
+        </div>
     </div>
     <!--Footer portion of webpage-->
     <footer>
-        
+        <span>&copy;2016 Colmar Academy. All rights reserved</span>
+        <div class="term">
+            <a href="#">Terms</a>
+            <a href="#">Privacy</a>
+        </div>
     </footer>
+</body>
 </html>
