--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="logo">
             <img src="./resource/images/ic-logo.svg" alt="Logo">
-            <span><em>COLMAR</em>ACADEMY</span>
+            <span><strong>COLMAR</strong>ACADEMY</span>
         </div>
         <nav class="nava">
             <a href="#">On Campus</a>
