Trouble with styling

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <div class="content">
         <!--Banner Portion of Page-->
             <div class="banner">
-                <div class="ban">
-                    <img src=".resource/images/banner.jpg" alt="Banner">
+                <div class="ba">
+                    <img src="./resource/images/banner.jpg" alt="Banner">
                 </div>
-                <div class="ban">
+                <div class="bann">
                     <h1>Learn something new everyday</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <a class="btn" href"#">Start here</a>
@@ -50,8 +50,8 @@
             </div>
         <!--Information Portion of page-->
             <div class=info>
-                <div class="data">
-                    <img src=".resource/images/information-main.jpg" alt="Main Info">
+                <div class="dat">
+                    <img src="./resource/images/information-main.jpg" alt="">
                     <h2>It doesn't hurt to keep practicing</h2>
                     <p>"Codecademy is an online interactive platform that offers free coding class
                         12 different programming languages including Python, Java, PHP, JavaScript, 
@@ -61,7 +61,7 @@
                 <div class="data">
                     <div class="block">
                         <div class="indep">
-                            <img src=".resource/images/orientation.jpg" alt="Orientation">
+                            <img src="./resource/images/information-orientation.jpg" alt="Orientation">
                         </div>
                         <div class="indepth">
                             <h3>Orientation Date</h3>
@@ -71,7 +71,7 @@
                     </div>
                     <div class="block">
                         <div class="indep">
-                            <img src=".resource/images/campus.jpg" alt="Orientation">
+                            <img src="./resource/images/information-campus.jpg" alt="Orientation">
                         </div>
                         <div class="indepth">
                             <h3>Our Campus</h3>
@@ -81,7 +81,7 @@
                     </div>
                     <div class="block">
                         <div class="indep">
-                            <img src=".resource/images/orientation/jpg" alt="Orientation">
+                            <img src="./resource/images/information-guest.jpg" alt="Orientation">
                         </div>
                         <div class="indepth">
                             <h3>Our guest lecture</h3>
@@ -98,37 +98,37 @@
             </div>
             <div class="core">
                 <div class="blocks">
-                    <img src=".resource/images/course-software.jpg" alt="Software">
+                    <img src="./resource/images/course-software.jpg" alt="Software">
                     <h3>Software Engineering</h3>
                     <h4>Courses</h4>
                     <p>Web Development, Mobile Development, IOT, API's </p>
                 </div>
                 <div class="blocks">
-                    <img src=".resource/images/course-computer-art.jpg" alt="Software">
+                    <img src="./resource/images/course-computer-art.jpg" alt="Software">
                     <h3>Computer Art</h3>
                     <h4>Courses</h4>
                     <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
                 </div>
                 <div class="blocks">
-                    <img src=".resource/images/course-design.jpg" alt="Software">
+                    <img src="./resource/images/course-design.jpg" alt="Software">
                     <h3>Design</h3>
                     <h4>Courses</h4>
                     <p>User Experience Design, User Research, Visual Design</p>
                 </div>
                 <div class="blocks">
-                    <img src=".resource/images/course-data.jpg" alt="Software">
+                    <img src="./resource/images/course-data.jpg" alt="Software">
                     <h3>Data</h3>
                     <h4>Courses</h4>
                     <p>Data Science, Big Data, SQL, Data Visualizations</p>
                 </div>
                 <div class="blocks">
-                    <img src=".resource/images/course-business.jpg" alt="Software">
+                    <img src="./resource/images/course-business.jpg" alt="Software">
                     <h3>Business</h3>
                     <h4>Courses</h4>
                     <p>Product Development, Business Development, Startup</p>
                 </div>
                 <div class="blocks">
-                    <img src=".resource/images/course-marketing.jpg" alt="Software">
+                    <img src="./resource/images/course-marketing.jpg" alt="Software">
                     <h3>Marketing</h3>
                     <h4>Courses</h4>
                     <p>Analytics, Content Marketing, Mobile Marketing</p>
@@ -141,6 +141,36 @@
                 <h2>Thesis exhibit</h2>
             </div>
             <div class="hib">
+                <div class="wide">
+                <div class="last">
+                    <video width="320" height="240" controls>
+                        <source src="./resource/videos/thesis.mp4" type="video/mp4">
+                    </video>
+                    <h3>Reimagine urban</h3>
+                    <p>"Curatibur vitae libero in ipsum prtitor consequat.  Aliquam et 
+                        commodo lectus, nec consequat neque.  Sed non accumsan urna. 
+                        Phasellus sed consequat ex Etiam eget magna lacreet.  Efficly dolor 
+                        conseuat, tristique ligula"</p>
+                </div>
+                <div class="last">
+                    <div class="block">
+                        <div class="thes">
+                            <img src="./resource/images/thesis-fisma.jpg" alt="Orientation">
+                        </div>
+                        <div class="indepth">
+                            <h3>Fisma: Design and</h3>
+                            <p>Designer showcase of new prototype product</p>
+                    </div>
+                    <div class="block">
+                        <div class="thes">
+                            <img src="./resource/images/thesis-now-and-then.jpg" alt="Orientation">
+                        </div>
+                        <div class="indep">
+                            <h3>Now and then</h3>
+                            <p>Research study about New York</p>
+                    </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
