Fixing my moronic items

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="content">
         <!--Banner Portion of Page-->
             <div class="banner">
-                <div class="ba">
+                <div class="image">
                     <img src="./resource/images/banner.jpg" alt="Banner">
                 </div>
                 <div class="bann">
@@ -50,7 +50,7 @@
             </div>
         <!--Information Portion of page-->
             <div class=info>
-                <div class="dat">
+                <div class="image">
                     <img src="./resource/images/information-main.jpg" alt="">
                     <h2>It doesn't hurt to keep practicing</h2>
                     <p>"Codecademy is an online interactive platform that offers free coding class
@@ -71,7 +71,7 @@
                     </div>
                     <div class="block">
                         <div class="indep">
-                            <img src="./resource/images/information-campus.jpg" alt="Orientation">
+                            <img src="./resource/images/information-campus.jpg" alt="Campus">
                         </div>
                         <div class="indepth">
                             <h3>Our Campus</h3>
@@ -81,7 +81,7 @@
                     </div>
                     <div class="block">
                         <div class="indep">
-                            <img src="./resource/images/information-guest.jpg" alt="Orientation">
+                            <img src="./resource/images/information-guest-lecture.jpg" alt="Guest">
                         </div>
                         <div class="indepth">
                             <h3>Our guest lecture</h3>
@@ -93,7 +93,7 @@
             </div>
         <!--Course portion of page-->
         <div class="course">
-            <div class="core">
+            <div class="title">
                 <h1>Start Learning</h1>
             </div>
             <div class="core">
@@ -137,11 +137,10 @@
         </div>
         <!--Exhibit portion of page-->
         <div class="exhibit">
-            <div class="hib">
+            <div class="title">
                 <h2>Thesis exhibit</h2>
             </div>
             <div class="hib">
-                <div class="wide">
                 <div class="last">
                     <video width="320" height="240" controls>
                         <source src="./resource/videos/thesis.mp4" type="video/mp4">
@@ -154,26 +153,26 @@
                 </div>
                 <div class="last">
                     <div class="block">
-                        <div class="thes">
+                        <div class="indep">
                             <img src="./resource/images/thesis-fisma.jpg" alt="Orientation">
                         </div>
-                        <div class="indepth">
+                        <div class="thes">
                             <h3>Fisma: Design and</h3>
                             <p>Designer showcase of new prototype product</p>
+                        </div>
                     </div>
                     <div class="block">
-                        <div class="thes">
+                        <div class="indep">
                             <img src="./resource/images/thesis-now-and-then.jpg" alt="Orientation">
                         </div>
-                        <div class="indep">
+                        <div class="thes">
                             <h3>Now and then</h3>
                             <p>Research study about New York</p>
-                    </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
     <!--Footer portion of webpage-->
     <footer>
         <span>&copy;2016 Colmar Academy. All rights reserved</span>
