--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                     <img src="./resource/images/banner.jpg" alt="Banner">
                 </div>
                 <div class="bann">
-                    <h1>Learn something new everyday</h1>
+                    <h1>Learn something </br>new everyday</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <a class="btn" href"#">Start here</a>
+                    <a href="#" class="btn">Start here</a>
                     <!--
                     <div class="bann a">
                         <h1>Lefrn something new everyday</h1>
@@ -94,7 +94,7 @@
         <!--Course portion of page-->
         <div class="course">
             <div class="title">
-                <h1>Start Learning</h1>
+                <h2>Start Learning</h2>
             </div>
             <div class="core">
                 <div class="blocks">
@@ -156,7 +156,7 @@
                         <div class="indep">
                             <img src="./resource/images/thesis-fisma.jpg" alt="Orientation">
                         </div>
-                        <div class="thes">
+                        <div class="indepth">
                             <h3>Fisma: Design and</h3>
                             <p>Designer showcase of new prototype product</p>
                         </div>
@@ -165,7 +165,7 @@
                         <div class="indep">
                             <img src="./resource/images/thesis-now-and-then.jpg" alt="Orientation">
                         </div>
-                        <div class="thes">
+                        <div class="indepth">
                             <h3>Now and then</h3>
                             <p>Research study about New York</p>
                         </div>
