--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
                         </div>
                     </div>
                     <div class="block">
-                        <div class="indep">
+                        <div class="indep1">
                             <img src="./resource/images/information-guest-lecture.jpg" alt="Guest">
                         </div>
-                        <div class="indepth">
+                        <div class="indepth1">
                             <h3>Our guest lecture</h3>
                             <p>Join a keynote with Oliver Sack about music in medical treatment</p>
                             <a href="#">Read More</a>
