--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <a href="#">Sign in</a>
         </nav>
         <!--Nav section for mobile portal-->
-        <!--<nav class="navb">
-            <a href="#"><img src=".resource/images/ic-on-campus.svg" alt="On-campus"></a>
-            <a href="#"><img src=".resource/images/ic-online.svg" alt="Online"></a>
-            <a href="#"><img src=".resource/images/ic-login.svg" alt="Login"></a>
-        </nav>-->
+        <nav class="navb">
+            <a href="#"><img src="./resource/images/ic-on-campus.svg" alt="On-campus"></a>
+            <a href="#"><img src="./resource/images/ic-online.svg" alt="Online"></a>
+            <a href="#"><img src="./resource/images/ic-login.svg" alt="Login"></a>
+        </nav>
     </header>
     <!-- Content for web page-->
     <div class="content">
@@ -80,10 +80,10 @@
                         </div>
                     </div>
                     <div class="block">
-                        <div class="indep1">
+                        <div class="indep">
                             <img src="./resource/images/information-guest-lecture.jpg" alt="Guest">
                         </div>
-                        <div class="indepth1">
+                        <div class="indepth">
                             <h3>Our guest lecture</h3>
                             <p>Join a keynote with Oliver Sack about music in medical treatment</p>
                             <a href="#">Read More</a>
