--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
                     <h1>Learn something </br>new everyday</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <a href="#" class="btn">Start here</a>
-                    <!--
-                    <div class="bann a">
-                        <h1>Lefrn something new everyday</h1>
+                     <!--<div class="bann a">
+                        <h1>Learn something new everyday</h1>
                     </div>
                     <div class="bann b">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -51,7 +50,7 @@
         <!--Information Portion of page-->
             <div class=info>
                 <div class="image">
-                    <img src="./resource/images/information-main.jpg" alt="">
+                    <img src="./resource/images/information-main.jpg" alt="info">
                     <h2>It doesn't hurt to keep practicing</h2>
                     <p>"Codecademy is an online interactive platform that offers free coding class
                         12 different programming languages including Python, Java, PHP, JavaScript, 
@@ -59,7 +58,7 @@
                     <span class="eman">Emanuel, St Strategist at Hiring.com</span>
                 </div>
                 <div class="data">
-                    <div class="block">
+                    <div id="block">
                         <div class="indep">
                             <img src="./resource/images/information-orientation.jpg" alt="Orientation">
                         </div>
@@ -69,7 +68,7 @@
                             <a href="#">Read More</a>
                         </div>
                     </div>
-                    <div class="block">
+                    <div id="block">
                         <div class="indep">
                             <img src="./resource/images/information-campus.jpg" alt="Campus">
                         </div>
@@ -79,7 +78,7 @@
                             <a href="#">Read More</a>
                         </div>
                     </div>
-                    <div class="block">
+                    <div id="block">
                         <div class="indep">
                             <img src="./resource/images/information-guest-lecture.jpg" alt="Guest">
                         </div>
@@ -152,7 +151,7 @@
                         conseuat, tristique ligula"</p>
                 </div>
                 <div class="last">
-                    <div class="block">
+                    <div id="block">
                         <div class="indep">
                             <img src="./resource/images/thesis-fisma.jpg" alt="Orientation">
                         </div>
@@ -161,7 +160,7 @@
                             <p>Designer showcase of new prototype product</p>
                         </div>
                     </div>
-                    <div class="block">
+                    <div id="block">
                         <div class="indep">
                             <img src="./resource/images/thesis-now-and-then.jpg" alt="Orientation">
                         </div>
@@ -173,6 +172,7 @@
                 </div>
             </div>
         </div>
+    </div>
     <!--Footer portion of webpage-->
     <footer>
         <span>&copy;2016 Colmar Academy. All rights reserved</span>
