--- a/index.html
+++ b/index.html
@@ -29,27 +29,18 @@
     <div class="content">
         <!--Banner Portion of Page-->
             <div class="banner">
-                <div class="image">
+                <div class="media-container main-content">
                     <img src="./resource/images/banner.jpg" alt="Banner">
                 </div>
-                <div class="bann">
+                <div class="supporting-content">
                     <h1>Learn something </br>new everyday</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <a href="#" class="btn">Start here</a>
-                     <!--<div class="bann a">
-                        <h1>Learn something new everyday</h1>
-                    </div>
-                    <div class="bann b">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    </div>
-                    <div class="bann c">
-                        <a href"#">Start here</a>
-                    </div>-->
                 </div>
             </div>
         <!--Information Portion of page-->
-            <div class=info>
-                <div class="image">
+            <div class="info">
+                <div class="media-container main-content">
                     <img src="./resource/images/information-main.jpg" alt="info">
                     <h2>It doesn't hurt to keep practicing</h2>
                     <p>"Codecademy is an online interactive platform that offers free coding class
@@ -57,7 +48,7 @@
                         Ruby, SQL, and Sass, as well as markup languages HTML and CSS."</p>
                     <span class="eman">Emanuel, St Strategist at Hiring.com</span>
                 </div>
-                <div class="data">
+                <div class="supporting-content info-content">
                     <div id="block">
                         <div class="indep">
                             <img src="./resource/images/information-orientation.jpg" alt="Orientation">
@@ -140,7 +131,7 @@
                 <h2>Thesis exhibit</h2>
             </div>
             <div class="hib">
-                <div class="last">
+                <div class="media-container">
                     <video width="320" height="240" controls>
                         <source src="./resource/videos/thesis.mp4" type="video/mp4">
                     </video>
