Figuring it out for box alignment

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
                 <div class="media-container main-content">
                     <img src="./resource/images/banner.jpg" alt="Banner">
                 </div>
-                <div class="supporting-content">
+                <div class="supporting-content banner-content">
                     <h1>Learn something </br>new everyday</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <a href="#" class="btn">Start here</a>
                 </div>
             </div>
         <!--Information Portion of page-->
-            <div class="info">
+            <div class="info-content">
                 <div class="media-container main-content">
                     <img src="./resource/images/information-main.jpg" alt="info">
                     <h2>It doesn't hurt to keep practicing</h2>
@@ -48,32 +48,32 @@
                         Ruby, SQL, and Sass, as well as markup languages HTML and CSS."</p>
                     <span class="eman">Emanuel, St Strategist at Hiring.com</span>
                 </div>
-                <div class="supporting-content info-content">
+                <div class="supporting-content side-content">
                     <div id="block">
-                        <div class="indep">
+                        <div class="side-image">
                             <img src="./resource/images/information-orientation.jpg" alt="Orientation">
                         </div>
-                        <div class="indepth">
+                        <div class="side-info">
                             <h3>Orientation Date</h3>
                             <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
                             <a href="#">Read More</a>
                         </div>
                     </div>
                     <div id="block">
-                        <div class="indep">
+                        <div class="side-image">
                             <img src="./resource/images/information-campus.jpg" alt="Campus">
                         </div>
-                        <div class="indepth">
+                        <div class="side-info">
                             <h3>Our Campus</h3>
                             <p>Find which campus is close by you</p>
                             <a href="#">Read More</a>
                         </div>
                     </div>
                     <div id="block">
-                        <div class="indep">
+                        <div class="side-image">
                             <img src="./resource/images/information-guest-lecture.jpg" alt="Guest">
                         </div>
-                        <div class="indepth">
+                        <div class="side-info">
                             <h3>Our guest lecture</h3>
                             <p>Join a keynote with Oliver Sack about music in medical treatment</p>
                             <a href="#">Read More</a>
@@ -131,7 +131,7 @@
                 <h2>Thesis exhibit</h2>
             </div>
             <div class="hib">
-                <div class="media-container">
+                <div class="media-container main-content">
                     <video width="320" height="240" controls>
                         <source src="./resource/videos/thesis.mp4" type="video/mp4">
                     </video>
@@ -141,21 +141,21 @@
                         Phasellus sed consequat ex Etiam eget magna lacreet.  Efficly dolor 
                         conseuat, tristique ligula"</p>
                 </div>
-                <div class="last">
+                <div class="side-content supporting-content">
                     <div id="block">
-                        <div class="indep">
+                        <div class="side-image">
                             <img src="./resource/images/thesis-fisma.jpg" alt="Orientation">
                         </div>
-                        <div class="indepth">
+                        <div class="side-info">
                             <h3>Fisma: Design and</h3>
                             <p>Designer showcase of new prototype product</p>
                         </div>
                     </div>
                     <div id="block">
-                        <div class="indep">
+                        <div class="side-image">
                             <img src="./resource/images/thesis-now-and-then.jpg" alt="Orientation">
                         </div>
-                        <div class="indepth">
+                        <div class="side-info">
                             <h3>Now and then</h3>
                             <p>Research study about New York</p>
                         </div>
