Messing with Fonts

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="media-container main-content">
                     <img src="./resource/images/banner.jpg" alt="Banner">
                 </div>
-                <div class="supporting-content banner-content">
+                <div class="supporting-content" id="banner-content">
                     <h1>Learn something </br>new everyday</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <a href="#" class="btn">Start here</a>
