--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 </div>
                 <div class="supporting-content" id="banner-content">
                     <h1>Learn something </br>new everyday</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <a href="#" class="btn">Start here</a>
+                    <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <a href="#" class="button">Start here</a>
                 </div>
             </div>
         <!--Information Portion of page-->
@@ -48,7 +48,7 @@
                         Ruby, SQL, and Sass, as well as markup languages HTML and CSS."</p>
                     <span class="eman">Emanuel, St Strategist at Hiring.com</span>
                 </div>
-                <div class="supporting-content side-content">
+                <div class="supporting-content side-top">
                     <div id="block">
                         <div class="side-image">
                             <img src="./resource/images/information-orientation.jpg" alt="Orientation">
