Working on text & color

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="supporting-content" id="banner-content">
                     <h1>Learn something </br>new everyday</h1>
-                    <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <h4>Lorem ipsum dolor sit amet,</br> consectetur adipiscing elit.</p>
                     <a href="#" class="button">Start here</a>
                 </div>
             </div>
