Almost done with Desktop Browser

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <a href="#">Read More</a>
                         </div>
                     </div>
-                    <div id="block">
+                    <div id="block" class="grey">
                         <div class="side-image">
                             <img src="./resource/images/information-guest-lecture.jpg" alt="Guest">
                         </div>
@@ -124,6 +124,27 @@
                     <p>Analytics, Content Marketing, Mobile Marketing</p>
                 </div>
             </div>
+            <div class="core-mobile">
+                <div class="block-mobile">
+                    <h5>Software Engineering</h5>
+                </div>
+                <div class="block-mobile">
+                    <h5>Computer Art</h5>
+                </div>
+                <div class="block-mobile">
+                    <h5>Design</h5>
+                </div>
+                <div class="block-mobile">
+                    <h5>Data</h5>
+                </div>
+                <div class="block-mobile">
+                    <h5>Business</h5>
+                </div>
+                <div class="block-mobile">
+                    <h5>Marketing</h5>
+                </div>
+                
+            </div>
         </div>
         <!--Exhibit portion of page-->
         <div class="exhibit">
@@ -142,7 +163,7 @@
                         conseuat, tristique ligula"</p>
                 </div>
                 <div class="side-content supporting-content">
-                    <div id="block">
+                    <div id="block" class="grey">
                         <div class="side-image">
                             <img src="./resource/images/thesis-fisma.jpg" alt="Orientation">
                         </div>
