--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                     <img src="./resource/images/banner.jpg" alt="Banner">
                 </div>
                 <div class="supporting-content" id="banner-content">
-                    <h1>Learn something </br>new everyday</h1>
-                    <h4>Lorem ipsum dolor sit amet,</br> consectetur adipiscing elit.</p>
+                    <h1>Learn something new everyday</h1>
+                    <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <a href="#" class="button">Start here</a>
                 </div>
             </div>
