Working on Mobile portion

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <!--Header for webpage-->
     <header>
-        <div class="logo">
+        <div class="logo" id="disap">
             <img src="./resource/images/ic-logo.svg" alt="Logo">
             <span><strong>COLMAR</strong>ACADEMY</span>
         </div>
@@ -20,6 +20,7 @@
         </nav>
         <!--Nav section for mobile portal-->
         <nav class="navb">
+            <img src="./resource/images/ic-logo.svg" alt="Logo">
             <a href="#"><img src="./resource/images/ic-on-campus.svg" alt="On-campus"></a>
             <a href="#"><img src="./resource/images/ic-online.svg" alt="Online"></a>
             <a href="#"><img src="./resource/images/ic-login.svg" alt="Login"></a>
@@ -29,7 +30,7 @@
     <div class="content">
         <!--Banner Portion of Page-->
             <div class="banner">
-                <div class="media-container main-content">
+                <div class="media-container main-content" id="disap">
                     <img src="./resource/images/banner.jpg" alt="Banner">
                 </div>
                 <div class="supporting-content" id="banner-content">
@@ -40,7 +41,7 @@
             </div>
         <!--Information Portion of page-->
             <div class="info-content">
-                <div class="media-container main-content">
+                <div class="media-container main-content" id="disap">
                     <img src="./resource/images/information-main.jpg" alt="info">
                     <h2>It doesn't hurt to keep practicing</h2>
                     <p>"Codecademy is an online interactive platform that offers free coding class
@@ -83,7 +84,7 @@
             </div>
         <!--Course portion of page-->
         <div class="course">
-            <div class="title">
+            <div class="title" id="blockid">
                 <h2>Start Learning</h2>
             </div>
             <div class="core">
@@ -156,13 +157,13 @@
                     <video width="320" height="240" controls>
                         <source src="./resource/videos/thesis.mp4" type="video/mp4">
                     </video>
-                    <h3>Reimagine urban</h3>
-                    <p>"Curatibur vitae libero in ipsum prtitor consequat.  Aliquam et 
+                    <h3 id="disap">Reimagine urban</h3>
+                    <p id="disap">"Curatibur vitae libero in ipsum prtitor consequat.  Aliquam et 
                         commodo lectus, nec consequat neque.  Sed non accumsan urna. 
                         Phasellus sed consequat ex Etiam eget magna lacreet.  Efficly dolor 
                         conseuat, tristique ligula"</p>
                 </div>
-                <div class="side-content supporting-content">
+                <div class="side-content supporting-content" id="disap">
                     <div id="block" class="grey">
                         <div class="side-image">
                             <img src="./resource/images/thesis-fisma.jpg" alt="Orientation">
@@ -189,8 +190,8 @@
     <footer>
         <span>&copy;2016 Colmar Academy. All rights reserved</span>
         <div class="term">
-            <a href="#">Terms</a>
-            <a href="#">Privacy</a>
+            <a href="#" id="disap">Terms</a>
+            <a href="#" id="disap">Privacy</a>
         </div>
     </footer>
 </body>
