Tweaking some formating

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <!-- Content for web page-->
     <div class="content">
         <!--Banner Portion of Page-->
+            <div class="ban">
+             </div>
             <div class="banner">
                 <div class="media-container main-content" id="disap">
                     <img src="./resource/images/banner.jpg" alt="Banner">
